--- a/MusicStore/Pages/AccountSettings.xaml
+++ b/MusicStore/Pages/AccountSettings.xaml
@@ -115,8 +115,10 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                
-                <Button    x:Name="btnTaC"
+
+            </Grid>
+        </Border>
+        <Button    x:Name="btnTaC"
                                Content="{DynamicResource readregulation}"
                                FontSize="16"
                                BorderThickness="5,5,5,5"
@@ -124,25 +126,22 @@
                                FontFamily="InriaSans-Light"
                                Cursor="Hand"
                                Click="btnTaC_Click"
-                                HorizontalAlignment="Center"
+                                HorizontalAlignment="Left"
                                 VerticalAlignment="Top"
-                               Margin="0,110,0,0"
+                               Margin="10,301,0,0"
                                Style="{DynamicResource button1}"       
                         >
-                    <Button.Template>
-                        <ControlTemplate TargetType="Button">
-                            <Border Width="148"
+            <Button.Template>
+                <ControlTemplate TargetType="{x:Type Button}">
+                    <Border Width="168"
                                         Height="30"
                                         CornerRadius="5"
                                         Background="{TemplateBinding Background}">
-                                <ContentPresenter VerticalAlignment="Center"
+                        <ContentPresenter VerticalAlignment="Center"
                                                   HorizontalAlignment="Center"/>
-                            </Border>
-                        </ControlTemplate>
-                    </Button.Template>
-                </Button>
-                
-            </Grid>
-        </Border>
+                    </Border>
+                </ControlTemplate>
+            </Button.Template>
+        </Button>
     </Grid>
 </Page>
