--- a/MusicStore/Login.xaml
+++ b/MusicStore/Login.xaml
@@ -158,7 +158,7 @@
                         >
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
-                                <Border Width="102"
+                                <Border Width="110"
                                         Height="30"
                                         CornerRadius="5"
                                         Background="{TemplateBinding Background}">
@@ -169,7 +169,7 @@
                         </Button.Template>
                     </Button>
                         <Button    x:Name="btnguest"
-                               Content="Login as Guest"
+                               Content="{DynamicResource loginasguest}"
                                FontSize="14"
                                BorderThickness="5,5,5,5"
                                Foreground="White"
@@ -181,7 +181,7 @@
                         >
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
-                                    <Border Width="102"
+                                    <Border Width="110"
                                         Height="30"
                                         CornerRadius="5"
                                         Background="{TemplateBinding Background}">
